--- a/50. DOM/index.html
+++ b/50. DOM/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Password Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
