--- a/53. Add & change HTML/index.html
+++ b/53. Add & change HTML/index.html
@@ -7,7 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="welcome-m">Welcome </h1>
+    <div id="box01" class="box">
+        <p>Box01</p>
+    </div>
+
+    <div id="box02" class="box">
+        <p>Box02</p>
+    </div>
+
+    <div id="box03" class="box">
+        <p>Box03</p>
+    </div>
+
+    <div id="box04" class="box">
+        <p>Box04</p>
+    </div>
+
     <script type="module" src="index.js"></script>
 </body>
 </html>
